enterprise/examples/websocket/server/cilium-websocket-termination.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-proxy-ingress
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tcp-proxy-ingress
  namespace: default
subsets:
  - addresses:
      # Dummy IP, never used but required for now
      - ip: 192.192.192.192
    ports:
      - port: 443
---
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  name: cilium-websocket-tunnel-listener
spec:
  services:
  - name: tcp-proxy-ingress
    namespace: default
  resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: cilium-websocket-tunnel-listener
    filter_chains:
    - filters:
      - name: cilium.network.websocket.server
        typed_config:
          "@type": type.googleapis.com/cilium.WebSocketServer
          access_log_path: "/var/run/cilium/access_log.sock"
      - name: envoy.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_stats
          cluster: original_dst
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          # require_client_certificate: true
          common_tls_context:
            alpn_protocols:
            - http/1.1
            tls_certificate_sds_secret_configs:
            - name: cilium-secrets/websocket-termination-server-certs
            validation_context_sds_secret_config:
              name: validation_context
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: original_dst
    connect_timeout: 5s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED
  - "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret
    name: validation_context
    validation_context:
      trusted_ca:
        filename: /etc/ssl/certs/ca-certificates.crt
